==> hello-yan3/STM32-learning/16-CAN通讯/CAN—回环测试/User/can/bsp_can.c <==
/**
  ******************************************************************************
  * @file    bsp_debug_usart.c
  * @author  fire
  * @version V1.0
  * @date    2015-xx-xx
  * @brief   can驱动（回环模式）
  ******************************************************************************
  * @attention
  *
  * 实验平台:野火  STM32 F103-霸道 开发板  
  * 论坛    :http://www.firebbs.cn
  * 淘宝    :https://fire-stm32.taobao.com
  *
  ******************************************************************************
  */ 

#include "./can/bsp_can.h"

CAN_HandleTypeDef Can_Handle; /* CANx句柄 */
CanTxMsgTypeDef TxMessage;		/* 发送参数句柄 */
CanRxMsgTypeDef RxMessage;		/* 接收参数句柄 */

extern __IO uint32_t flag;		 //用于标志是否接收到数据，在中断函数中赋值

/*
 * 函数名：CAN_GPIO_Config
 * 描述  ：CAN的GPIO 配置
 * 输入  ：无
 * 输出  ：无
 * 调用  ：内部调用
 */
static void CAN_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* 使能引脚时钟 */
	CAN_TX_GPIO_CLK_ENABLE();
	CAN_RX_GPIO_CLK_ENABLE();	
	
	__HAL_RCC_AFIO_CLK_ENABLE();

	/* 配置CAN发送引脚 */
	GPIO_InitStructure.Pin = CAN_TX_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed =GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pull  = GPIO_PULLUP;

	HAL_GPIO_Init(CAN_TX_GPIO_PORT, &GPIO_InitStructure);

	/* 配置CAN接收引脚 */
	GPIO_InitStructure.Pin = CAN_RX_PIN ;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	HAL_GPIO_Init(CAN_RX_GPIO_PORT, &GPIO_InitStructure);
	
	__HAL_AFIO_REMAP_CAN1_2();
}

/*
 * 函数名：CAN_NVIC_Config
 * 描述  ：CAN的NVIC 配置,第1优先级组，0，0优先级
 * 输入  ：无
 * 输出  ：无
 * 调用  ：内部调用
 */
static void CAN_NVIC_Config(void)
{
   /* 配置抢占优先级的分组 */
	HAL_NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_1);
	/*中断设置，抢占优先级0，子优先级为0*/
	HAL_NVIC_SetPriority(CAN_RX_IRQ, 0 ,0);
	HAL_NVIC_EnableIRQ(CAN_RX_IRQ);
  
//  /* 使用中断接收 */
//  __HAL_CAN_ENABLE_IT(&Can_Handle, CAN_FIFO0); /* FIFO0消息挂号中断允许 */
  // 上面那句程序，在 HAL_CAN_Receive_IT(&Can_Handle, CAN_FIFO0); 中，被调用
}

/*
 * 函数名：CAN_Mode_Config
 * 描述  ：CAN的模式 配置
 * 输入  ：无
 * 输出  ：无
 * 调用  ：内部调用
 */
/**
 * @brief       CAN初始化（正点原子 注释）
 * @param       tsjw    : 重新同步跳跃时间单元.范围: 1~3;
 * @param       tbs2    : 时间段2的时间单元.范围: 1~8;
 * @param       tbs1    : 时间段1的时间单元.范围: 1~16;
 * @param       brp     : 波特率分频器.范围: 1~1024;
 *   @note      以上4个参数, 在函数内部会减1, 所以, 任何一个参数都不能等于0
 *              CAN挂在APB1上面, 其输入时钟频率为 Fpclk1 = PCLK1 = 36Mhz
 *              tq     = brp * tpclk1;
 *              波特率 = Fpclk1 / ((tbs1 + tbs2 + 1) * brp);
 *              我们设置 can_init(1, 8, 9, 4, 1), 则CAN波特率为:
 *              36M / ((8 + 9 + 1) * 4) = 500Kbps
 *
 * @param       mode    : CAN_MODE_NORMAL,  普通模式;
                          CAN_MODE_LOOPBACK,回环模式;
 * @retval      0,  初始化成功; 其他, 初始化失败;
 */
static void CAN_Mode_Config(void)
{
	/************************CAN通信参数设置**********************************/
	/* 使能CAN时钟 */
	CAN_CLK_ENABLE();

	Can_Handle.Instance = CANx;
	Can_Handle.pTxMsg = &TxMessage;
	Can_Handle.pRxMsg = &RxMessage;
	
	/* CAN控制单元初始化 */
	
	/* TTCM 时间触发模式，
		 在此模式下，CAN 使用它内部定时器产生时间戳，并把它保存在 CAN_RDTxR、CAN_TDTxR 寄存器中。
	   内部定时器在每个 CAN 位时间累加，在接收和发送的帧起始位被采样，并生成时间戳。*/
	Can_Handle.Init.TTCM=DISABLE;			   //MCR-TTCM  关闭时间触发通信模式使能
	
	/* ABOM 自动离线管理，
	   当节点检测到它发送错误或接收错误超过一定值时，会自动进入离线状态，在离线状态中，CAN 不能接收或发送报文。
		 处于离线状态的时候，可以软件控制恢复或者直接使用这个自动离线管理功能，它会在适当的时候自动恢复。*/
	Can_Handle.Init.ABOM=ENABLE;			   //MCR-ABOM  自动离线管理 
	
	/* AWUM 自动唤醒，
	   CAN 外设可以使用软件进入低功耗的睡眠模式，
		 如果使能了这个自动唤醒功能，当 CAN 检测到总线活动的时候，会自动唤醒。*/	
	Can_Handle.Init.AWUM=ENABLE;			   //MCR-AWUM  使用自动唤醒模式
	
	/* NART 自动重传
	   设置这个功能后，当报文发送失败时会自动重传至成功为止。
		 若不使用这个功能，无论发送结果如何，消息只发送一次*/		
	Can_Handle.Init.NART=DISABLE;			   //MCR-NART  禁止报文自动重传	  DISABLE-自动重传
	
	/* RFLM 锁定模式
	   锁定后，当接收 FIFO 溢出时，会丢弃下一个接收的报文。
		 若不锁定，则下一个接收到的报文会覆盖原报文。*/			
	Can_Handle.Init.RFLM=DISABLE;			   //MCR-RFLM  接收FIFO 锁定模式  DISABLE-溢出时新报文会覆盖原有报文  
	
	/* TXFP 报文发送优先级的判定方法
	   当 CAN 外设的发送邮箱中有多个待发送报文时，
		 本功能可以控制它是根据报文的 ID 优先级还是报文存进邮箱的顺序来发送。*/			
	Can_Handle.Init.TXFP=DISABLE;			   //MCR-TXFP  发送FIFO优先级 DISABLE-优先级取决于报文标示符 
	
	/*
	#define CAN_MODE_NORMAL              // Normal mode   正常模式
	#define CAN_MODE_LOOPBACK            // Loopback mode 回环模式（可向外发送不向外接收，可自回环）
	#define CAN_MODE_SILENT              // Silent mode   静默模式（不向外发送可向外接收，可自回环）
	#define CAN_MODE_SILENT_LOOPBACK     // Loopback combined with silent mode  静默回环模式（仅支持自回环）
	*/
	Can_Handle.Init.Mode = CAN_MODE_LOOPBACK;  //回环模式
	
	Can_Handle.Init.SJW=CAN_SJW_2TQ;		   //BTR-SJW 重新同步跳跃宽度 2个时间单元

	/* ss=1 bs1=5 bs2=3 位时间宽度为(1+5+3) 波特率即为时钟周期tq*(1+3+5)  */
	Can_Handle.Init.BS1=CAN_BS1_5TQ;		   //BTR-TS1 时间段1 占用了5个时间单元
	Can_Handle.Init.BS2=CAN_BS2_3TQ;		   //BTR-TS1 时间段2 占用了3个时间单元	

	/* CAN Baudrate = 1 MBps (1MBps已为stm32的CAN最高速率) (CAN 时钟频率为 APB 1 = 36 MHz) */
	// BTR-BRP 波特率分频器  定义了时间单元的时间长度 36/(1+5+3)/4=1 Mbps
	// CAN挂载APB1总线，CLK = 36MHz，4分频，则时基为9Mhz，时间宽度9Tq，则波特率1 Mbps
	Can_Handle.Init.Prescaler =4;		   
	
	HAL_CAN_Init(&Can_Handle);
}

/*
 * 函数名：CAN_Filter_Config
 * 描述  ：CAN的过滤器 配置
 * 输入  ：无
 * 输出  ：无
 * 调用  ：内部调用
 */
static void CAN_Filter_Config(void)
{
	CAN_FilterConfTypeDef  CAN_FilterInitStructure;

	/* CAN筛选器初始化 */
	// STM32F103 系列芯片仅有 14 个筛选器组：0-13 号
	CAN_FilterInitStructure.FilterNumber=0;						//筛选器组0
	CAN_FilterInitStructure.FilterMode=CAN_FILTERMODE_IDMASK; 	//工作在掩码模式
	
	/* 使能筛选器，按照标志的内容进行比对筛选，扩展ID不是如下的就抛弃掉，是的话，会存入FIFO0。 */
	/* 单个32位：检查 EXTID[28:0]、 IDE 和 RTR 位，一共 31 位 */
	/* 两个16位：检查 STDID[10:0]、 RTR、 IDE 和 EXTID[17:15]，一共 16 位 */
	CAN_FilterInitStructure.FilterScale=CAN_FILTERSCALE_32BIT;	//筛选器位宽为单个32位。
	
	CAN_FilterInitStructure.FilterIdHigh= ((((uint32_t)0x1314<<3)|CAN_ID_EXT|CAN_RTR_DATA)&0xFFFF0000)>>16;		//要筛选的ID高位 
	CAN_FilterInitStructure.FilterIdLow=   (((uint32_t)0x1314<<3)|CAN_ID_EXT|CAN_RTR_DATA)&0xFFFF;  //要筛选的ID低位
	/* 0x1314左移3位, 表示扩展ID | RTR 位(区分数据帧和遥控帧) | IDE 位(区分标准格式与扩展格式)  */
	/* CAN_RTR_DATA(数据帧) |  CAN_ID_EXT(扩展帧格式) */
	
	CAN_FilterInitStructure.FilterMaskIdHigh= 0xFFFF;			//筛选器高16位每位必须匹配
	CAN_FilterInitStructure.FilterMaskIdLow=  0xFFFF;			//筛选器低16位每位必须匹配
	
	CAN_FilterInitStructure.FilterFIFOAssignment=CAN_FILTER_FIFO0 ;	//筛选器被关联到FIFO0
	CAN_FilterInitStructure.FilterActivation=ENABLE;			//使能筛选器
	HAL_CAN_ConfigFilter(&Can_Handle,&CAN_FilterInitStructure);
}

/*
 * 函数名：CAN_Config
 * 描述  ：完整配置CAN的功能
 * 输入  ：无
 * 输出  ：无
 * 调用  ：外部调用
 */
void CAN_Config(void)
{
  CAN_GPIO_Config();
  CAN_NVIC_Config();
  CAN_Mode_Config();
  CAN_Filter_Config();
  Init_RxMes(); 
  HAL_CAN_Receive_IT(&Can_Handle, CAN_FIFO0); 	// 使能CAN接收中断
}


/**
  * @brief  初始化 Rx Message数据结构体
  * @param  RxMessage: 指向要初始化的数据结构体
  * @retval None
  */
void Init_RxMes(void)
{
  uint8_t ubCounter = 0;

  /*把接收结构体清零*/
  Can_Handle.pRxMsg->StdId = 0x00;
  Can_Handle.pRxMsg->ExtId = 0x00;
  Can_Handle.pRxMsg->IDE = CAN_ID_STD;
  Can_Handle.pRxMsg->DLC = 0;
	// FMI 指定邮箱中存储的邮件所经过的过滤器的索引。
	// 这里0 表示使用 筛选器组0
  Can_Handle.pRxMsg->FMI = 0;  
	// 指定接收 FIFO 编号
  // Can_Handle.pRxMsg->FIFONumber = CAN_FIFO0;  	
  for (ubCounter = 0; ubCounter < 8; ubCounter++)
  {
    Can_Handle.pRxMsg->Data[ubCounter] = 0x00;
  }
}


/*
 * 函数名：CAN_SetMsg
 * 描述  ：CAN通信报文内容设置,设置一个数据内容为0-7的数据包
 * 输入  ：发送报文结构体
 * 输出  ：无
 * 调用  ：外部调用
 */	 
void CAN_SetMsg(void)
{	  
  uint8_t ubCounter = 0;
  Can_Handle.pTxMsg->StdId=0x00;						   //这里初始化标准ID没用
  Can_Handle.pTxMsg->ExtId=0x1314;				  	 //使用的扩展ID
  Can_Handle.pTxMsg->IDE=CAN_ID_EXT;				   //扩展模式
  Can_Handle.pTxMsg->RTR=CAN_RTR_DATA;				 //发送的是数据
  Can_Handle.pTxMsg->DLC=8;						      	 //数据长度为8字节
	
  /*设置要发送的数据0-7*/
  for (ubCounter = 0; ubCounter < 8; ubCounter++)
  {
    Can_Handle.pTxMsg->Data[ubCounter] = ubCounter;
  }
}

/*
bit3~bit31 EXID ( 或者:  bit21~bit31 STID)
bit2: IDE
bit1: RTR
*/


void CAN_RX_IRQHandler(void)
{
	HAL_CAN_IRQHandler(&Can_Handle);
}

void CAN2_TX_IRQHandler(void)
{
	HAL_CAN_IRQHandler(&Can_Handle);
}

/**
  * @brief  CAN接收完成中断(非阻塞) 
  * @param  hcan: CAN句柄指针
  * @retval 无
  */
void HAL_CAN_RxCpltCallback(CAN_HandleTypeDef* hcan)
{
	/* 比较ID是否为0x1314 */ 
	if((hcan->pRxMsg->ExtId==0x1314) && (hcan->pRxMsg->IDE==CAN_ID_EXT) && (hcan->pRxMsg->DLC==8) )
	{
		flag = 1; //接收成功  
	}
	else
	{
		flag = 0; //接收失败
	}
	/* 准备中断接收 */
	HAL_CAN_Receive_IT(&Can_Handle, CAN_FIFO0);
}
/**
  * @brief  CAN错误回调函数
  * @param  hcan: CAN句柄指针
  * @retval 无
  */
void HAL_CAN_ErrorCallback(CAN_HandleTypeDef *hcan)
{
	printf("\r\nCAN出错\r\n");
}


/**************************END OF FILE************************************/
